cargo-features = ["edition2021"]

[package]
name = "upgrade-program"
version = "1.0.1"
description = "Distributed Lab - Solana Program Library"
authors = ["Distributed Lab <contact@distributedlab.com>"]
repository = "https://github.com/distributed-lab/solana-program-library"
license = "MIT"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.15.2"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.9.3"
thiserror = "1.0"
shank = { version = "~0.0.2" }
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
bs58 = "0.4.0"
winnow="=0.4.1"

[lib]
name = "upgrade"
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true